syntax = "proto3";

package proto;

option java_package = "com.proto.blog";
option java_multiple_files = true;

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

// Create Blog
message CreateBlogRequest {
  Blog blog = 1; // the id shouldn't matter
}

message CreateBlogResponse {
  Blog blog = 1; // the id will correspond to the one in MongoDB
}

// Read Blog
message ReadBlogRequest {
  string blog_id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

// Update Blog
message UpdateBlogRequest {
  Blog blog = 1;
}

message UpdateBlogResponse {
  Blog blog = 1;
}

// Delete Blog
message DeleteBlogRequest {
  string blog_id = 1;
}

message DeleteBlogResponse {
  string blog_id = 1;
}

service BlogService {
  // RPC Create Blog
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};

  // RPC Read Blog
  rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {}; // return NOT_FOUND if not found

  // RPC Update Blog
  rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {}; // return NOT_FOUND if not found

  // RPC Delet Blog
  rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse) {}; // return NOT_FOUND if not found
}